--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 			<version>3.0.4.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.3.0.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
