--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,17 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.3.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.7.0-M1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
